# Clash-Qt

./: .clang-format  .gitignore  CMakeLists.txt  README.md
res/: clash-qt.desktop  res.qrc  style.qss
res/default/: config.yaml
src/: clash.cpp  clash.h  clashconfig.cpp  clashconfig.h  editdialog.cpp  editdialog.h  editdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  subscribemanager.cpp  subscribemanager.h  subscribemanager.ui  systemtray.cpp  systemtray.h  webui.cpp  webui.h
src/clash/: clash.cpp  clash.h  restfulapi.cpp  restfulapi.h
src/ui/util/: flowlayout.cpp  flowlayout.h
src/ui/widget/: collapsiblearea.cpp  collapsiblearea.h  netspeedlabel.cpp  netspeedlabel.h  proxygroupwidget.cpp  proxygroupwidget.h  proxygroupwidget.ui  proxywidget.cpp  proxywidget.h  proxywidget.ui
src/ui/window/: connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  connectionpage.cpp  connectionpage.h  logdialog.cpp  logdialog.h  logdialog.ui  logpage.cpp  logpage.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  profiledialog.cpp  profiledialog.h  profiledialog.ui  profilemanager.cpp  profilemanager.h  profilemanager.ui  profilepage.cpp  profilepage.h  profilepage.ui  proxypage.cpp  proxypage.h  proxypage.ui  tray.cpp  tray.h
src/util/: instance.h  qtyaml.h
